--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.4",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "globals": "^15.2.0"
   }
 }
